--- a/BookService/packages.config
+++ b/BookService/packages.config
@@ -35,6 +35,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
+  <package id="Node.js" version="0.10.26.1" targetFramework="net45" />
+  <package id="NoGit" version="0.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Select2.js" version="3.2" targetFramework="net45" />
