--- a/BookService/packages.config
+++ b/BookService/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Angular.UI" version="0.4" targetFramework="net45" />
+  <package id="Angular.UI.Bootstrap" version="0.11.0" targetFramework="net45" />
   <package id="angularjs" version="1.2.22" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
