--- a/BookService/BookService.csproj
+++ b/BookService/BookService.csproj
@@ -226,10 +226,6 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\BookService.mdf" />
-    <Content Include="App_Data\BookService_log.ldf">
-      <DependentUpon>BookService.mdf</DependentUpon>
-    </Content>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\angular-busy.css" />
     <Content Include="Content\angular-ui.css" />
@@ -642,6 +638,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
