added new AddBookController

--- a/BookService/BookService.csproj
+++ b/BookService/BookService.csproj
@@ -275,6 +275,7 @@
     <Content Include="Scripts\app\books\BookController.js" />
     <Content Include="Scripts\app\books\BookService.js" />
     <Content Include="Scripts\app\genres\GenreService.js" />
+    <Content Include="Scripts\app\books\AddBookController.js" />
     <Content Include="Scripts\ClassUtility.js" />
     <Content Include="Scripts\knockoutapp.js" />
     <Content Include="Scripts\app\app.js" />
@@ -607,6 +608,7 @@
     <Content Include="Scripts\select2.js" />
     <Content Include="Scripts\select2.min.js" />
     <Content Include="Scripts\toaster.js" />
+    <Content Include="Views\Partials\AddBook.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
